{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 226,
  "lineage": "80777c4d-bd57-af1a-3fb9-795e0f924d7f",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:564746766952:security-group/sg-072be1ba5e13cdbb1",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-072be1ba5e13cdbb1",
            "ingress": [],
            "name": "my_cluster_katkam_test-cluster-20231117004328267800000008",
            "name_prefix": "my_cluster_katkam_test-cluster-",
            "owner_id": "564746766952",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my_cluster_katkam_test-cluster"
            },
            "tags_all": {
              "CATEGORY": "ENG_ASSESSMENT",
              "Name": "my_cluster_katkam_test-cluster",
              "OWNER": "katkam_s"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5a37a88cea393ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:564746766952:security-group/sg-0ca487ab707b106d2",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0ca487ab707b106d2",
            "ingress": [],
            "name": "my_cluster_katkam_test-node-20231117004328410300000009",
            "name_prefix": "my_cluster_katkam_test-node-",
            "owner_id": "564746766952",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my_cluster_katkam_test-node",
              "kubernetes.io/cluster/my_cluster_katkam_test": "owned"
            },
            "tags_all": {
              "CATEGORY": "ENG_ASSESSMENT",
              "Name": "my_cluster_katkam_test-node",
              "OWNER": "katkam_s",
              "kubernetes.io/cluster/my_cluster_katkam_test": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5a37a88cea393ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-196265569",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-072be1ba5e13cdbb1",
            "security_group_rule_id": "sgr-06f54ce5873775663",
            "self": false,
            "source_security_group_id": "sg-0ca487ab707b106d2",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1067926857",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0ca487ab707b106d2",
            "security_group_rule_id": "sgr-0f8c62503b217e6ff",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-428019547",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ca487ab707b106d2",
            "security_group_rule_id": "sgr-077673ff736928fb3",
            "self": false,
            "source_security_group_id": "sg-072be1ba5e13cdbb1",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1899980112",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ca487ab707b106d2",
            "security_group_rule_id": "sgr-05c3a16676dff8768",
            "self": false,
            "source_security_group_id": "sg-072be1ba5e13cdbb1",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3095200454",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ca487ab707b106d2",
            "security_group_rule_id": "sgr-0f92527c00034c72e",
            "self": false,
            "source_security_group_id": "sg-072be1ba5e13cdbb1",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2871082727",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ca487ab707b106d2",
            "security_group_rule_id": "sgr-0332a2a6004cec3bc",
            "self": false,
            "source_security_group_id": "sg-072be1ba5e13cdbb1",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3481275692",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ca487ab707b106d2",
            "security_group_rule_id": "sgr-03e4ba146d78a315f",
            "self": false,
            "source_security_group_id": "sg-072be1ba5e13cdbb1",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2227866607",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ca487ab707b106d2",
            "security_group_rule_id": "sgr-018dcc87d57cabaf2",
            "self": false,
            "source_security_group_id": "sg-072be1ba5e13cdbb1",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3679134147",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ca487ab707b106d2",
            "security_group_rule_id": "sgr-03d68d0436702af69",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1262373605",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ca487ab707b106d2",
            "security_group_rule_id": "sgr-0beafb0200629c601",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-4016171274",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0ca487ab707b106d2",
            "security_group_rule_id": "sgr-02dc3e8334c74e73f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:564746766952:network-acl/acl-07ae2ffb00dffc45d",
            "default_network_acl_id": "acl-07ae2ffb00dffc45d",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-07ae2ffb00dffc45d",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "564746766952",
            "subnet_ids": [
              "subnet-006bf4de20dfd245d",
              "subnet-017af7a8793f5f99d",
              "subnet-091b3305ef232e3d3",
              "subnet-0939ec371c3d304bc",
              "subnet-0c79e0b37aedf3333",
              "subnet-0e48fbabb64ba7ad1"
            ],
            "tags": {
              "Name": "my-vpc-default"
            },
            "tags_all": {
              "CATEGORY": "ENG_ASSESSMENT",
              "Name": "my-vpc-default",
              "OWNER": "katkam_s"
            },
            "vpc_id": "vpc-0f5a37a88cea393ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:564746766952:route-table/rtb-00f34c47b30dfdb65",
            "default_route_table_id": "rtb-00f34c47b30dfdb65",
            "id": "rtb-00f34c47b30dfdb65",
            "owner_id": "564746766952",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "my-vpc-default"
            },
            "tags_all": {
              "CATEGORY": "ENG_ASSESSMENT",
              "Name": "my-vpc-default",
              "OWNER": "katkam_s"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0f5a37a88cea393ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:564746766952:security-group/sg-03715d421721367ef",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-03715d421721367ef",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "564746766952",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-vpc-default"
            },
            "tags_all": {
              "CATEGORY": "ENG_ASSESSMENT",
              "Name": "my-vpc-default",
              "OWNER": "katkam_s"
            },
            "vpc_id": "vpc-0f5a37a88cea393ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b818348b53c2596a",
            "domain": "vpc",
            "id": "eipalloc-0b818348b53c2596a",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-229-51-168.us-west-2.compute.amazonaws.com",
            "public_ip": "44.229.51.168",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-vpc-us-west-2a"
            },
            "tags_all": {
              "CATEGORY": "ENG_ASSESSMENT",
              "Name": "my-vpc-us-west-2a",
              "OWNER": "katkam_s"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00f41f6952fdd1a13",
            "domain": "vpc",
            "id": "eipalloc-00f41f6952fdd1a13",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-34-211-31-96.us-west-2.compute.amazonaws.com",
            "public_ip": "34.211.31.96",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-vpc-us-west-2b"
            },
            "tags_all": {
              "CATEGORY": "ENG_ASSESSMENT",
              "Name": "my-vpc-us-west-2b",
              "OWNER": "katkam_s"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02c063cf3d495bc55",
            "domain": "vpc",
            "id": "eipalloc-02c063cf3d495bc55",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-52-38-134-205.us-west-2.compute.amazonaws.com",
            "public_ip": "52.38.134.205",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-vpc-us-west-2c"
            },
            "tags_all": {
              "CATEGORY": "ENG_ASSESSMENT",
              "Name": "my-vpc-us-west-2c",
              "OWNER": "katkam_s"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:564746766952:internet-gateway/igw-0a2d7dfb210b8ced1",
            "id": "igw-0a2d7dfb210b8ced1",
            "owner_id": "564746766952",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "CATEGORY": "ENG_ASSESSMENT",
              "Name": "my-vpc",
              "OWNER": "katkam_s"
            },
            "vpc_id": "vpc-0f5a37a88cea393ca"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b818348b53c2596a",
            "association_id": "eipassoc-07ea2a3922d2305ab",
            "connectivity_type": "public",
            "id": "nat-0497b2d2a4409828b",
            "network_interface_id": "eni-0cb4a1918b03a5e26",
            "private_ip": "10.0.101.119",
            "public_ip": "44.229.51.168",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-091b3305ef232e3d3",
            "tags": {
              "Name": "my-vpc-us-west-2a"
            },
            "tags_all": {
              "CATEGORY": "ENG_ASSESSMENT",
              "Name": "my-vpc-us-west-2a",
              "OWNER": "katkam_s"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00f41f6952fdd1a13",
            "association_id": "eipassoc-084ea0bffb7a38926",
            "connectivity_type": "public",
            "id": "nat-05f51ec3abf474aa7",
            "network_interface_id": "eni-07056c2eccee88f37",
            "private_ip": "10.0.102.239",
            "public_ip": "34.211.31.96",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e48fbabb64ba7ad1",
            "tags": {
              "Name": "my-vpc-us-west-2b"
            },
            "tags_all": {
              "CATEGORY": "ENG_ASSESSMENT",
              "Name": "my-vpc-us-west-2b",
              "OWNER": "katkam_s"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02c063cf3d495bc55",
            "association_id": "eipassoc-0589ac33a180c8286",
            "connectivity_type": "public",
            "id": "nat-03183eb8d9cdf0026",
            "network_interface_id": "eni-01adad6bdf7f5ee5e",
            "private_ip": "10.0.103.247",
            "public_ip": "52.38.134.205",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-006bf4de20dfd245d",
            "tags": {
              "Name": "my-vpc-us-west-2c"
            },
            "tags_all": {
              "CATEGORY": "ENG_ASSESSMENT",
              "Name": "my-vpc-us-west-2c",
              "OWNER": "katkam_s"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09c147683d2574bd71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0497b2d2a4409828b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09c147683d2574bd7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-039f32f94b4a061b21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05f51ec3abf474aa7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-039f32f94b4a061b2",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-081db599167bce6fb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03183eb8d9cdf0026",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-081db599167bce6fb",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a2d7dfb210b8ced1",
            "id": "r-rtb-064cc585b2db91ab51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-064cc585b2db91ab5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:564746766952:route-table/rtb-09c147683d2574bd7",
            "id": "rtb-09c147683d2574bd7",
            "owner_id": "564746766952",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-vpc-private-us-west-2a"
            },
            "tags_all": {
              "CATEGORY": "ENG_ASSESSMENT",
              "Name": "my-vpc-private-us-west-2a",
              "OWNER": "katkam_s"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5a37a88cea393ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:564746766952:route-table/rtb-039f32f94b4a061b2",
            "id": "rtb-039f32f94b4a061b2",
            "owner_id": "564746766952",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-vpc-private-us-west-2b"
            },
            "tags_all": {
              "CATEGORY": "ENG_ASSESSMENT",
              "Name": "my-vpc-private-us-west-2b",
              "OWNER": "katkam_s"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5a37a88cea393ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:564746766952:route-table/rtb-081db599167bce6fb",
            "id": "rtb-081db599167bce6fb",
            "owner_id": "564746766952",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-vpc-private-us-west-2c"
            },
            "tags_all": {
              "CATEGORY": "ENG_ASSESSMENT",
              "Name": "my-vpc-private-us-west-2c",
              "OWNER": "katkam_s"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5a37a88cea393ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:564746766952:route-table/rtb-064cc585b2db91ab5",
            "id": "rtb-064cc585b2db91ab5",
            "owner_id": "564746766952",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-vpc-public"
            },
            "tags_all": {
              "CATEGORY": "ENG_ASSESSMENT",
              "Name": "my-vpc-public",
              "OWNER": "katkam_s"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5a37a88cea393ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048422a10f6c2bf0e",
            "route_table_id": "rtb-09c147683d2574bd7",
            "subnet_id": "subnet-0c79e0b37aedf3333"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027d499f6241359ef",
            "route_table_id": "rtb-039f32f94b4a061b2",
            "subnet_id": "subnet-017af7a8793f5f99d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9d1cfccf3661aa1",
            "route_table_id": "rtb-081db599167bce6fb",
            "subnet_id": "subnet-0939ec371c3d304bc"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03dc6c27f34b68955",
            "route_table_id": "rtb-064cc585b2db91ab5",
            "subnet_id": "subnet-091b3305ef232e3d3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b60ca072d0d0f3ea",
            "route_table_id": "rtb-064cc585b2db91ab5",
            "subnet_id": "subnet-0e48fbabb64ba7ad1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001817a7ddd1064c0",
            "route_table_id": "rtb-064cc585b2db91ab5",
            "subnet_id": "subnet-006bf4de20dfd245d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:564746766952:subnet/subnet-0c79e0b37aedf3333",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c79e0b37aedf3333",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "564746766952",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-private-us-west-2a"
            },
            "tags_all": {
              "CATEGORY": "ENG_ASSESSMENT",
              "Name": "my-vpc-private-us-west-2a",
              "OWNER": "katkam_s"
            },
            "vpc_id": "vpc-0f5a37a88cea393ca"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:564746766952:subnet/subnet-017af7a8793f5f99d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017af7a8793f5f99d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "564746766952",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-private-us-west-2b"
            },
            "tags_all": {
              "CATEGORY": "ENG_ASSESSMENT",
              "Name": "my-vpc-private-us-west-2b",
              "OWNER": "katkam_s"
            },
            "vpc_id": "vpc-0f5a37a88cea393ca"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:564746766952:subnet/subnet-0939ec371c3d304bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0939ec371c3d304bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "564746766952",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-private-us-west-2c"
            },
            "tags_all": {
              "CATEGORY": "ENG_ASSESSMENT",
              "Name": "my-vpc-private-us-west-2c",
              "OWNER": "katkam_s"
            },
            "vpc_id": "vpc-0f5a37a88cea393ca"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:564746766952:subnet/subnet-091b3305ef232e3d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091b3305ef232e3d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "564746766952",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-public-us-west-2a"
            },
            "tags_all": {
              "CATEGORY": "ENG_ASSESSMENT",
              "Name": "my-vpc-public-us-west-2a",
              "OWNER": "katkam_s"
            },
            "vpc_id": "vpc-0f5a37a88cea393ca"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:564746766952:subnet/subnet-0e48fbabb64ba7ad1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e48fbabb64ba7ad1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "564746766952",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-public-us-west-2b"
            },
            "tags_all": {
              "CATEGORY": "ENG_ASSESSMENT",
              "Name": "my-vpc-public-us-west-2b",
              "OWNER": "katkam_s"
            },
            "vpc_id": "vpc-0f5a37a88cea393ca"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:564746766952:subnet/subnet-006bf4de20dfd245d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006bf4de20dfd245d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "564746766952",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-public-us-west-2c"
            },
            "tags_all": {
              "CATEGORY": "ENG_ASSESSMENT",
              "Name": "my-vpc-public-us-west-2c",
              "OWNER": "katkam_s"
            },
            "vpc_id": "vpc-0f5a37a88cea393ca"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:564746766952:vpc/vpc-0f5a37a88cea393ca",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07ae2ffb00dffc45d",
            "default_route_table_id": "rtb-00f34c47b30dfdb65",
            "default_security_group_id": "sg-03715d421721367ef",
            "dhcp_options_id": "dopt-01c3ec01b02eb80fa",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f5a37a88cea393ca",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00f34c47b30dfdb65",
            "owner_id": "564746766952",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "CATEGORY": "ENG_ASSESSMENT",
              "Name": "my-vpc",
              "OWNER": "katkam_s"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}